#-----------------------------------------------------------------------------
# This file is part of the pysmurf software package. It is subject to 
# the license terms in the LICENSE.txt file found in the top-level directory 
# of this distribution and at: 
#    https://confluence.slac.stanford.edu/display/ppareg/LICENSE.html. 
# No part of the pysmurf software package, including this file, may be 
# copied, modified, propagated, or distributed except according to the terms 
# contained in the LICENSE.txt file.
#-----------------------------------------------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmurf"
dynamic = ["version"]
description = "The python control software for SMuRF"
readme = "README.md"
license-files = ["LICEN[CS]E.*"]
dependencies = [
    "matplotlib",
    "numpy",
    "packaging",
    "pyepics",
    "pyyaml",
    "schema",
    "scipy",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = {attr = "pysmurf.__version__"}
