#-----------------------------------------------------------------------------
# This file is part of the pysmurf software package. It is subject to 
# the license terms in the LICENSE.txt file found in the top-level directory 
# of this distribution and at: 
#    https://confluence.slac.stanford.edu/display/ppareg/LICENSE.html. 
# No part of the pysmurf software package, including this file, may be 
# copied, modified, propagated, or distributed except according to the terms 
# contained in the LICENSE.txt file.
#-----------------------------------------------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmurf"
dynamic = ["version"]
description = "The python control software for SMuRF"
readme = "README.md"
# Note: This is the older identifier format, which is needed to build on Python 3.8.
license = {file = "LICENSE.txt"}
# When updating to build on a more recent version, use the below identifiers.
#license = "Stanford"
#license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "matplotlib",
    "numpy",
    "packaging",
    "pyepics",
    "pyyaml",
    "schema",
    "scipy",
    "seaborn",
]

[project.urls]
"Bug Tracker" = "https://github.com/slaclab/pysmurf/issues"
Documentation = "https://pysmurf.readthedocs.io"
Homepage = "https://github.com/slaclab/pysmurf"
"Source Code" = "https://github.com/slaclab/pysmurf"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[tool.setuptools.dynamic]
version = {attr = "pysmurf.__version__"}
